--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>포트폴리오</title>
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
  <!-- 아이콘 태그 -->
@@ -23,11 +22,10 @@
 
 <body>
   <div class="main">
-    <div class="container-fluid row whole fadeOut">
+    <div class="container-fluid row whole fadeOut page__description">
         <div class="col-4 container1" >
             <div class="box1 fadeOut">
                 <span>SEARCH DEVELOPER 01 </span> 
-                <img src="/img/close.png" id="closeBtn"> 
             </div>
             <div class="box2 fadeOut">
                 <img src="./img/ian.jpg" id="myphoto">
@@ -56,7 +54,7 @@
 
             <div class="box5 fadeOut">
                 <div> <button class="Dropdown-Btn"><i class="fa fa-caret-right"></i> About</button>
-                      <button class="btn about"> <i class="fa fa-caret-down"></i>About Me</button>
+                      <button class="btn about"> <i class="fa fa-caret-down"></i> About Me</button>
                 </div>
                 <div> 
                     <button class="Dropdown-Btn"> <i class="fa fa-caret-right"></i>Front-end</button> 
@@ -87,4 +85,5 @@
     </div>
 </div>
 </body>
+
 </html>
