--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="../css/about.css">
-
+    <script type="text/javascript" defer src="../js/about.js"></script>
 </head>
 <body>
     <div class="header">
@@ -15,27 +15,17 @@
 
     <div class="container-outer">
         <div class="container-inner">
-   <div class="box1">About Me</div>
-   <div class="title"></div>
+   <div class="box1"> <span> About Me</span></div>
+   <div class="write">
+   <div>안녕하세요 에러에 꺾이지 않는 마음을 가진 최이안입니다.</div>
    <div>
-    차근차근 꾸준히 
-    최적의 솔루션을 제공하는 통찰력과 창의력을 가진 개발자가 되겠습니다.
+    프로그램 만드는 것의 재미, 에러들을 통과하고 프로젝트를 마쳤을 때의 쾌감을 느끼게 되어 <br>
+    개발자를 꿈꾸게 되었습니다. <br>
+    최적의 솔루션을 제공하고, 깔끔한 코드를 사용하는 개발자가 되겠습니다.
    </div>
-</div>
-</div>
-<script>
-let content = "안녕하세요 풀스택을 꿈꾸는 개발자 최이안입니다.";
-let typing = document.querySelector(".title");
-let i = 0;
-
-function typingText(){
-  if(i < content.length) {
-    let txt = content.charAt(i);
-    typing.innerHTML += txt == "\n" ? "<br/>" : txt;
-    i++;
-  }
-}
-setInterval(typingText,70);
-</script>
+   <div class="title"></div>
+   </div>
+   </div>
+  </div>
 </body>
 </html>
