--- a/html/about.html
+++ b/html/about.html
@@ -17,9 +17,9 @@
         <div class="container-inner">
    <div class="box1"> <span> About Me</span></div>
    <div class="write">
-   <div>안녕하세요 에러에 꺾이지 않는 마음을 가진 최이안입니다.</div>
+   <div class="pha1">안녕하세요 에러에 꺾이지 않는 마음을 가진 최이안입니다.</div>
    <div>
-    프로그램 만드는 것의 재미, 에러들을 통과하고 프로젝트를 마쳤을 때의 쾌감을 느끼게 되어 <br>
+    프로그램 만드는 것의 재미, 에러들을 통과하고 프로젝트를 마쳤을 때 <br>성취감을 느끼게 되어 
     개발자를 꿈꾸게 되었습니다. <br>
     최적의 솔루션을 제공하고, 깔끔한 코드를 사용하는 개발자가 되겠습니다.
    </div>
