--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="box5 fadeOut">
                 <div> <button class="Dropdown-Btn"><i class="fa fa-caret-right"></i> About</button>
-                      <button class="btn about"> <i class="fa fa-caret-down"></i> About Me</button>
+                      <button class="btn about"> <i class="fa fa-caret-down"></i> <a href="../html/about.html"></a> About Me</button>
                 </div>
                 <div> 
                     <button class="Dropdown-Btn"> <i class="fa fa-caret-right"></i>Front-end</button> 
