--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 </div>
                 <div> 
                     <button class="Dropdown-Btn"> <i class="fa fa-caret-right"></i>Front-end</button> 
-                        <button class="btn board1"> <i class="fa fa-caret-down"></i>Company Project</button>
+                        <button class="btn board1"> <i class="fa fa-caret-down"></i><a href="./board/companyProject.html">Company Project</a></button>
               </div>
               <div> 
                 <button class="Dropdown-Btn"> <i class="fa fa-caret-right"></i>Back-end</button> 
-                    <button class="btn board2"> <i class="fa fa-caret-down"></i>Team Project</button>
+                    <button class="btn board2"> <i class="fa fa-caret-down"></i><a href="./board/TeamProject.html">Team Project</a></button>
             </div>
             <div> 
                 <button class="Dropdown-Btn"> <i class="fa fa-caret-right"></i>Toy Project</button> 
-                     <button class="btn board3"> <i class="fa fa-caret-down"></i>Board Project</button>
+                     <button class="btn board3"> <i class="fa fa-caret-down"></i><a href="./board/ToyProject.html">Board Project</a></button>
             </div>
             </div>
 
