--- a/board/companyProject.html
+++ b/board/companyProject.html
@@ -50,25 +50,25 @@
       
         <div class="row">
           <div class="column">
-            <img class="preView cursor" src="../img/company/main.PNG" style="width:100%" onclick="nextPhoto(1)" alt="메인페이지">
+            <img class="preView cursor" src="../img/company/main.PNG" onclick="nextPhoto(1)" alt="메인페이지">
           </div>
           <div class="column">
-            <img class="preView cursor" src="../img/company/product.PNG" style="width:100%" onclick="nextPhoto(2)" alt="제품목록">
+            <img class="preView cursor" src="../img/company/product.PNG" onclick="nextPhoto(2)" alt="제품목록">
           </div>
           <div class="column">
-            <img class="preView cursor" src="../img/company/way.PNG" style="width:100%" onclick="nextPhoto(3)" alt="오시는길">
+            <img class="preView cursor" src="../img/company/way.PNG" onclick="nextPhoto(3)" alt="오시는길">
           </div>
           <div class="column">
-            <img class="preView cursor" src="../img//company/quriy.PNG" style="width:100%" onclick="nextPhoto(4)" alt="상품문의">
+            <img class="preView cursor" src="../img//company/quriy.PNG" onclick="nextPhoto(4)" alt="상품문의">
           </div>
           <div class="column">
-            <img class="preView cursor" src="../img/company/login.PNG" style="width:100%" onclick="nextPhoto(5)" alt="로그인화면">
+            <img class="preView cursor" src="../img/company/login.PNG" onclick="nextPhoto(5)" alt="로그인화면">
           </div>    
           <div class="column">
-            <img class="preView cursor" src="../img/company/join.PNG" style="width:100%" onclick="nextPhoto(6)" alt="회원가입">
+            <img class="preView cursor" src="../img/company/join.PNG" onclick="nextPhoto(6)" alt="회원가입">
           </div>
           <div class="column">
-            <img class="preView cursor" src="../img/company/join3.PNG" style="width:100%" onclick="nextPhoto(7)" alt="동의약관선택">
+            <img class="preView cursor" src="../img/company/join3.PNG" onclick="nextPhoto(7)" alt="동의약관선택">
           </div>
         </div>
 
