--- a/board/companyProject.html
+++ b/board/companyProject.html
@@ -90,7 +90,9 @@
                 메인페이지,상세페이지,로그인,회원가입,1:1문의,Q&A,FAQ를 구현했습니다. </div>
           <li>주소</li>
 
-          <div class="write"> <a class="link" href="https://godianz.github.io/frontend/index.html">https://godianz.github.io/frontend/index.html</a>   </div>
+          <div class="write"> 
+            <a class="link" href="https://godianz.github.io/frontend/index.html">https://godianz.github.io/frontend</a>   
+          </div>
             </ul>
                 
             
